# lagrangian-modeling

./: .gitignore  pyproject.toml
data/: figure_eight.npz  figure_eight_sample.npz  lagrange.npz  random.npz  sun_earth_moon.npz
src/neural_lagrangian_modeling/: datamodels.py
src/neural_lagrangian_modeling/analytic_simulation/: generate_trajectories.py  initial_conditions.py  random_initial_conditions.py  three_body_problem.py
src/neural_lagrangian_modeling/neural_simulation/: accel_calculator.py  lighting_trainer.py  three_body_dataset.py  torch_trainer.py  vanilla_neural_network.py
src/neural_lagrangian_modeling/visualization/: three_body_visualizer.py
