[tool.poetry]
name = "neural-lagrangian-modeling"
version = "0.1.0"
description = ""
authors = ["Fady <fnakhla23@gmail.com>"]
readme = "README.md"
packages = [{include = "neural_lagrangian_modeling", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
