[tool.poetry]
name = "neural-lagrangian-modeling"
version = "0.1.0"
description = ""
authors = ["Fady <fnakhla23@gmail.com>"]
readme = "README.md"
packages = [{include = "neural_lagrangian_modeling", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
torch = "^2.5.1"
matplotlib = "^3.9.2"
pydantic = "^2.9.2"
lightning = "^2.4.0"
tensorboard = "^2.18.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
